fix: Correção no contraste de cores do site

--- a/todo-list-igor/src/App.css
+++ b/todo-list-igor/src/App.css
@@ -1,9 +1,9 @@
 body {
   font-family: 'Exo', sans-serif;
-  background-color: aliceblue;
+  background-color: #e0e0e0;
   padding: 3%;
-  color:rgb(164, 208, 89);
-  background-image: linear-gradient(90deg, #00240e 0%, #09793f 35%, #00ff7b 100%);
+  color:#333;
+  background-image: linear-gradient(90deg, #0A5128 0%, #09793f 35%, #00C884 100%);
   background-position: center;
   background-size: cover;
 }
@@ -11,17 +11,20 @@ body {
 .app{
   max-width: 600px;
   margin: 0 auto 300px;
-  background-color: rgb(31, 147, 48);
+  background-color: #e0e0e0;
   padding: 20px 30px;
   border-radius: 10px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 h1 {
   text-align: center;
+  color: #0A5128;
 }
 
 h2 {
   margin-bottom: 10px;
+  color: #09793f;
 }
 
 p {
@@ -34,30 +37,31 @@ input {
 
 button {
   background-color: #09793f;
-  color:aliceblue;
-  padding: 5px 10px;
+  color: #fff;
+  padding: 6px 12px;
   margin-right: 10px;
   border: none;
   border-radius: 3px;
   cursor: pointer;
-  opacity: 0.8;
+  opacity: 0.9;
   transition: 0.3s;
 }
 
 button:hover {
   opacity: 1;
+  transform: scale(1.05); /* Efeito de escala suave no hover */
 }
 
 .todo-list {
   margin-bottom: 20px;
   padding-bottom: 20px;
-  border-bottom: 1px solid #00240e;
+  border-bottom: 1px solid #ddd;
   
 }
 
 .todo {
-  background-color: rgb(76, 165, 116);
-  box-shadow: 0 0 10px rgba(0, 0, 0 0.1);
+  background-color: #e0e0e0;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   padding: 10px;
   margin-bottom: 10px;
   border-radius: 5px;
@@ -67,28 +71,36 @@ button:hover {
 }
 
 .complete {
-  background-color: #51965c;
+  background-color: #f9f9f9; /* Fundo branco */
+  color: #09793f; /* Verde médio para texto */
+  border: 1px solid #09793f; /* Borda verde médio */
 }
 
 .delete {
-  background-color: #d6605c;
+  background-color: #f9f9f9; /* Fundo branco */
+  color: #D6605C; /* Vermelho escuro para texto */
+  border: 1px solid #D6605C; /* Borda vermelha escura */
 }
 
 .edit {
-  background-color: #69eaae97;
+  background-color: #f4f4f4; /* Fundo um pouco mais escuro */
+  color: #0A5128; /* Verde mais escuro */
+  border: 1px solid #0A5128; /* Borda verde mais escura */
 }
 
 .todo-form{
   padding-bottom: 1.5rem;
   margin-bottom: 20px;
   padding-bottom: 20px;
-  border-bottom: 1px solid #00240e;
+  border-bottom: 1px solid #ddd;
 }
 
 input, select {
   padding: 5px;
   margin-bottom: 10px;
-  border: 1px solid #00ff7b53;
+  border: 1px solid #ccc; /* Borda mais clara */
   border-radius: 3px;
   width: 100%;
+  background-color: #f9f9f9; /* Fundo branco */
+  color: #333; /* Texto mais escuro */
 }
